# aws_terraform

./: .gitignore  .terraform.lock.hcl  README.md  config.template.yaml  create_resources.sh  ecr.tf  ecspresso.yaml  locals.tf  main.tf  manage_resources.sh  models.yaml  outputs.tf  providers.tf  pyproject.toml  render-task-def.sh  scripts.sh  task-definition-render.sh  task-definition.json  task-definition.template.json  taskdef.json  taskdef.template.json  template.Dockerfile  update_model_options.sh  variables.tf
.github/scripts/: validate_models_yaml.py
.github/workflows/: deploy-model.yaml  deploy-task-definition.yaml  deploy-task.yaml  deploy-tf.yaml  deploy.yaml  manage-resources.yaml  models-directory-limit.yaml  poc.yaml  sync-model-options.yaml  update-deployment.yaml
infrastructure/: .terraform.lock.hcl  data.tf  iam.tf  locals.tf  main.tf  outputs.tf  providers.tf
infrastructure/modules/ecs_ml_service/: outputs.tf
models/ml-model-1/: Dockerfile  generate_model.py  model.pth  serve_torch_model.py
models/ml-model-1/src/: app.py
models/ml-model-2/: Dockerfile  pyproject.toml
models/ml-model-2/src/: app.py
models/ml_model_1/: pyproject.toml
models/ml_model_2/: Dockerfile  config.yaml
models/ml_moldel_1/: config.yaml
models_config/ml-model-1/: config.yaml
models_config/ml-model-2/: config.yaml
models_config/ml_model_1/: config.yaml
modules/ecs_ml_service/: README.md  data.tf  main.tf  variables.tf
templates/: config.template.yaml  taskdef.template.json  template.Dockerfile
templates/models/ml-model-1/: pyproject.toml
templates/models_config/ml-model-1/: config.yaml
