[project]
name = "science-deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "torch>=2.10.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
swagger = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.40.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
