[project]
name = "ml-model-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "requests>=2.32.5",
]
service = [
    "boto3>=1.42.37",
    "litserve>=0.2.17",
    "numpy>=2.2.6",
    "torch>=2.10.0",
]
